# MusicApplication

./: CMakeLists.txt  README.md  main.cpp
gui/: gui2.cpp  gui2.h  gui2.ui  tutorialModel.cpp  tutorialModel.h
service/: service.cpp  service.h
undo&redo/: Action.cpp  Action.h  ActionAdd.cpp  ActionAdd.h  ActionRemove.cpp  ActionRemove.h  ActionUpdate.cpp  ActionUpdate.h
